// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should render an icon 1`] = `
<i
  className="Icon"
>
  <Home
    color="currentColor"
    size="24"
  />
</i>
`;

exports[`Icon component should render an icon with default size 1`] = `
<i
  className="Icon"
>
  <Home
    color="currentColor"
    size={16}
  />
</i>
`;
